--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!--coded by ReverseGamerG{Guilherme Martins}-->
 <body>
   <div id="card">
-    <img src="/assets/images/avatar-jessica.jpeg" alt="Jessica Randall">
+    <img src="./assets/images/avatar-jessica.jpeg" alt="Jessica Randall">
     <section id="name">
       <h1>Jessica Randall</h1>
       <p>London, United Kingdom</p>
